--- a/README
+++ b/README
@@ -1,1 +1,23 @@
 pico -- dscape/nano's little brother
+(c) 2012 Stephane Alnet
+
+pico.request is mikeal/request extended with a prefix URI that
+is automatically prepended to any URI.
+
+    r = pico.request('http://127.0.0.1:5984/db')
+    r.get('foo')
+
+pico builds on pico.request (and therefor request) and provides
+CouchDB-oriented methods.
+
+    retrieve(id,options,function(error,response,json))
+Returns the document identified by id. Note that the revision is then {_rev:etag}.
+
+    rev(id,options,function(error,response,{rev:etag}))
+Returns the latest rev for the document identified by id.
+
+    update(doc,options,function(error,response,json))
+Creates or updates the document. The json object might contain {rev:etag} if the operation was successful.
+
+    remove(doc,options,function(error,response,json))
+Deletes the document. The json object might contain {rev:etag} if the operation was successful.
